2004-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (with-syntax-table): Redefine it for XEmacs 21.5.

	* message.el (message-setup-fill-variables): Add mml tags to
	paragraph-start and paragraph-separate.  Suggested by Andrew Korty
	<ajk@iu.edu>.
	(message-mode): Don't modify paragraph-separate there.

2004-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface-use-external): Default to undecided.
	(uncompface-use-external-threshold): New variable.
	(uncompface-float-time): New macro.
	(uncompface): Determine whether to use the external decoder if
	uncompface-use-external is undecided.

2004-02-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-inline-image-emacs): Don't insert blank lines
	after images.

	* gnus-art.el (gnus-mime-display-single): Remove dead code.

2004-02-14  Jesper Harder  <harder@ifa.au.dk>

	* nnrss.el (nnrss-request-article, nnrss-find-el): Cleanup.

	* html2text.el (html2text-get-attr, html2text-fix-paragraph): do

	* gnus-sum.el (gnus-summary-limit-to-age)
	(gnus-summary-limit-children): do.

	* gnus-int.el (gnus-request-scan): do.

	* gnus-group.el (gnus-group-suspend): do.

	* gnus-cus.el (gnus-agent-cat-prepare-category-field): do.

	* gnus-cite.el (gnus-cite-parse-attributions): do.

	* gnus-agent.el (gnus-summary-set-agent-mark)
	(gnus-agent-regenerate-group): do.

	* deuglify.el (gnus-article-outlook-unwrap-lines): do.

	* binhex.el (binhex-decode-region-internal): do.

2004-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-fun.el (gnus-face-properties-alist): New user option.
	(gnus-display-x-face-in-from): Use it.

	* gnus-art.el (article-display-face): Ditto.

	* compface.el (uncompface-use-external): Default to nil.

2004-02-12  Jesper Harder  <harder@ifa.au.dk>

	* nntp.el (nntp-erase-buffer): New function.
	(nntp-retrieve-data, nntp-send-command)
	(nntp-send-buffer, nntp-retrieve-groups, nntp-handle-authinfo)
	(nntp-possibly-change-group): Use it.
