@@ -1,3 +1,11 @@
+2004-02-24  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* spam-report.el (spam-report-process-queue): Fix interactive use.
+	(spam-report-url-ping-temp-agent-function, spam-report-plug-agent)
+	(spam-report-unplug-agent): Doc fixes.
+	(spam-report-url-ping-mm-url, spam-report-url-to-file)
+	(spam-report-agentize, spam-report-deagentize): Autoload
+
 2004-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* dgnushack.el (with-syntax-table): Redefine it for XEmacs 21.5.
